force-app/main/default/objects/Account/fields/Analyst_1st_Backup__c.field-meta.xml
<CustomField>
    <fullName>Analyst_1st_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst 1st Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>