force-app/main/default/objects/Account/fields/Analyst_2nd_Backup__c.field-meta.xml
<CustomField>
    <fullName>Analyst_2nd_Backup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Analyst 2nd Backup</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts3</relationshipName>
    <type>Lookup</type>
</CustomField>