force-app/main/default/objects/Account/fields/ASTM_D_2321__c.field-meta.xml
<CustomField>
    <fullName>ASTM_D_2321__c</fullName>
    <label>ASTM D 2321</label>
    <type>Date</type>
</CustomField>