force-app/main/default/objects/Account/fields/Calculated_Industry__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Industry__c</fullName>
    <formula>CASE(Industry, &apos;CO&apos;, &apos;Commercial Castings&apos;, &apos;HA&apos;, &apos;Retail&apos;, &apos;HC&apos;, &apos;Retail&apos;, &apos;PB&apos;, &apos;Wholesale&apos;, &apos;IR&apos;, &apos;Irrigation&apos;, &apos;EX&apos;, &apos;International&apos;, &apos;OM&apos;, &apos;OM MHRV&apos;, &quot;MH&quot;, &apos;OM MHRV&apos;, &apos;&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Calculated Industry</label>
    <type>Text</type>
</CustomField>