force-app/main/default/objects/Account/fields/Cast_Iron__c.field-meta.xml
<CustomField>
    <fullName>Cast_Iron__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Cast Iron</label>
    <type>Checkbox</type>
</CustomField>