force-app/main/default/objects/Account/fields/ChemDrain__c.field-meta.xml
<CustomField>
    <fullName>ChemDrain__c</fullName>
    <label>ChemDrain</label>
    <type>Date</type>
</CustomField>