force-app/main/default/objects/Account/fields/CISPI_310__c.field-meta.xml
<CustomField>
    <fullName>CISPI_310__c</fullName>
    <label>CISPI 310</label>
    <type>Date</type>
</CustomField>