force-app/main/default/objects/Account/fields/CISPI_NSF__c.field-meta.xml
<CustomField>
    <fullName>CISPI_NSF__c</fullName>
    <label>CISPI/NSF</label>
    <type>Date</type>
</CustomField>