force-app/main/default/objects/Account/fields/Contractor_Key__c.field-meta.xml
<CustomField>
    <fullName>Contractor_Key__c</fullName>
    <label>Contractor Key</label>
    <length>100</length>
    <type>Text</type>
</CustomField>