force-app/main/default/objects/Account/fields/Edge_HP_Iron__c.field-meta.xml
<CustomField>
    <fullName>Edge_HP_Iron__c</fullName>
    <label>Edge HP Iron</label>
    <type>Date</type>
</CustomField>