force-app/main/default/objects/Account/fields/ENSX_EDM__SAP_Customer_Number__c.field-meta.xml
<CustomField>
    <fullName>ENSX_EDM__SAP_Customer_Number__c</fullName>
    <label>SAP Customer Number</label>
    <length>50</length>
    <type>Text</type>
</CustomField>