force-app/main/default/objects/Account/fields/FGG__c.field-meta.xml
<CustomField>
    <fullName>FGG__c</fullName>
    <label>FGG</label>
    <type>Date</type>
</CustomField>