force-app/main/default/objects/Account/fields/FLD_Email__c.field-meta.xml
<CustomField>
    <fullName>FLD_Email__c</fullName>
    <description>Email</description>
    <label>Email</label>
    <length>241</length>
    <type>Text</type>
</CustomField>