force-app/main/default/objects/Account/fields/FLD_SAP_Is_Deleted__c.field-meta.xml
<CustomField>
    <fullName>FLD_SAP_Is_Deleted__c</fullName>
    <defaultValue>false</defaultValue>
    <description>SAP Is Deleted</description>
    <label>SAP Is Deleted</label>
    <type>Checkbox</type>
</CustomField>