force-app/main/default/objects/Account/fields/FormattedAccountId__c.field-meta.xml
<CustomField>
    <fullName>FormattedAccountId__c</fullName>
    <formula>&quot;,&apos;&quot; + Id + &quot;&apos;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormattedAccountId</label>
    <type>Text</type>
</CustomField>