force-app/main/default/objects/Account/fields/FormattedSAPID__c.field-meta.xml
<CustomField>
    <fullName>FormattedSAPID__c</fullName>
    <formula>&quot;,&apos;&quot; + SAP_Acct__c + &quot;&apos;&quot;</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>FormattedSAPID</label>
    <type>Text</type>
</CustomField>