force-app/main/default/objects/Account/fields/Group_Key__c.field-meta.xml
<CustomField>
    <fullName>Group_Key__c</fullName>
    <label>Group Key</label>
    <length>10</length>
    <type>Text</type>
</CustomField>