force-app/main/default/objects/Account/fields/In_house_Sales_Manager__c.field-meta.xml
<CustomField>
    <fullName>In_house_Sales_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>In-house Sales Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts4</relationshipName>
    <type>Lookup</type>
</CustomField>