force-app/main/default/objects/Account/fields/Infor_ID__c.field-meta.xml
<CustomField>
    <fullName>Infor_ID__c</fullName>
    <label>Infor ID</label>
    <length>25</length>
    <type>Text</type>
</CustomField>