force-app/main/default/objects/Account/fields/Int_l_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>Int_l_Account_Type__c</fullName>
    <label>Int&apos;l Account Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Client/Developer</fullName>
            </value>
            <value>
                <fullName>Consultant</fullName>
            </value>
            <value>
                <fullName>Government Contractor</fullName>
            </value>
            <value>
                <fullName>Local Distributor</fullName>
            </value>
            <value>
                <fullName>MEP Contractor</fullName>
            </value>
            <value>
                <fullName>REP</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>