force-app/main/default/objects/Account/fields/Melissa_Enterprise_Key__c.field-meta.xml
<CustomField>
    <fullName>Melissa_Enterprise_Key__c</fullName>
    <label>Melissa Enterprise Key</label>
    <precision>9</precision>
    <scale>0</scale>
    <type>Number</type>
    <unique>true</unique>
</CustomField>