force-app/main/default/objects/Account/fields/NAICS_Code_1__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_1__c</fullName>
    <label>NAICS Code 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>