force-app/main/default/objects/Account/fields/NAICS_Code_2__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Code_2__c</fullName>
    <label>NAICS Code 2</label>
    <length>10</length>
    <type>Text</type>
</CustomField>