force-app/main/default/objects/Account/fields/NAICS_Desc_1__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Desc_1__c</fullName>
    <label>NAICS Desc 1</label>
    <type>TextArea</type>
</CustomField>