force-app/main/default/objects/Account/fields/NAICS_Desc_2__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Desc_2__c</fullName>
    <label>NAICS Desc 2</label>
    <type>TextArea</type>
</CustomField>