force-app/main/default/objects/Account/fields/NAICS_Desc_3__c.field-meta.xml
<CustomField>
    <fullName>NAICS_Desc_3__c</fullName>
    <label>NAICS Desc 3</label>
    <type>TextArea</type>
</CustomField>