force-app/main/default/objects/Account/fields/Order_Creation__c.field-meta.xml
<CustomField>
    <fullName>Order_Creation__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Creation</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>