force-app/main/default/objects/Account/fields/Other_Spec__c.field-meta.xml
<CustomField>
    <fullName>Other_Spec__c</fullName>
    <label>Other Spec</label>
    <length>100</length>
    <type>Text</type>
</CustomField>