force-app/main/default/objects/Account/fields/Other_Spec_Confirm_Date__c.field-meta.xml
<CustomField>
    <fullName>Other_Spec_Confirm_Date__c</fullName>
    <label>Other Spec Confirm Date</label>
    <type>Date</type>
</CustomField>