force-app/main/default/objects/Account/fields/Plastic_Fitting__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Fitting__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plastic Fitting</label>
    <type>Checkbox</type>
</CustomField>