force-app/main/default/objects/Account/fields/Plastic_Pipe__c.field-meta.xml
<CustomField>
    <fullName>Plastic_Pipe__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Plastic Pipe</label>
    <type>Checkbox</type>
</CustomField>