force-app/main/default/objects/Account/fields/PO_Box__c.field-meta.xml
<CustomField>
    <fullName>PO_Box__c</fullName>
    <label>PO Box #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>