force-app/main/default/objects/Account/fields/PO_Box_Zip__c.field-meta.xml
<CustomField>
    <fullName>PO_Box_Zip__c</fullName>
    <label>PO Box Zip</label>
    <length>10</length>
    <type>Text</type>
</CustomField>