force-app/main/default/objects/Account/fields/Price_Protection__c.field-meta.xml
<CustomField>
    <fullName>Price_Protection__c</fullName>
    <label>Price Protection</label>
    <length>100</length>
    <type>Text</type>
</CustomField>