force-app/main/default/objects/Account/fields/Primary_Seller__c.field-meta.xml
<CustomField>
    <fullName>Primary_Seller__c</fullName>
    <label>Primary Seller</label>
    <type>TextArea</type>
</CustomField>