force-app/main/default/objects/Account/fields/Regional_Sale_Manager__c.field-meta.xml
<CustomField>
    <fullName>Regional_Sale_Manager__c</fullName>
    <label>Regional Sales Manager</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>10</fullName>
            </value>
            <value>
                <fullName>43</fullName>
            </value>
            <value>
                <fullName>35</fullName>
            </value>
            <value>
                <fullName>32</fullName>
            </value>
            <value>
                <fullName>18</fullName>
            </value>
            <value>
                <fullName>38</fullName>
            </value>
            <value>
                <fullName>70</fullName>
            </value>
            <value>
                <fullName>36</fullName>
            </value>
            <value>
                <fullName>20</fullName>
            </value>
            <value>
                <fullName>60</fullName>
            </value>
            <value>
                <fullName>85</fullName>
            </value>
            <value>
                <fullName>50</fullName>
            </value>
            <value>
                <fullName>80</fullName>
            </value>
            <value>
                <fullName>15</fullName>
            </value>
            <value>
                <fullName>52</fullName>
            </value>
            <value>
                <fullName>95</fullName>
            </value>
            <value>
                <fullName>12</fullName>
            </value>
            <value>
                <fullName>21</fullName>
            </value>
            <value>
                <fullName>22</fullName>
            </value>
            <value>
                <fullName>30</fullName>
            </value>
            <value>
                <fullName>99</fullName>
            </value>
            <value>
                <fullName>45</fullName>
            </value>
            <value>
                <fullName>65</fullName>
            </value>
            <value>
                <fullName>40</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>