force-app/main/default/objects/Account/fields/Sales_Rep2__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep2__c</fullName>
    <formula>Sales_Rep_Account__r.SAP_Acct__c</formula>
    <label>Sales Rep</label>
    <type>Text</type>
</CustomField>