force-app/main/default/objects/Account/fields/Sales_Rep_Account__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Sales Rep Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sold To Accounts</relationshipLabel>
    <relationshipName>Accounts</relationshipName>
    <type>Lookup</type>
</CustomField>