force-app/main/default/objects/Account/fields/Sales_Rep_if_applicable__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_if_applicable__c</fullName>
    <description>List of Sales Reps in Salesforce</description>
    <label>Sales Rep (if applicable)</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Battersby Danielson Azbell &amp; Associates	85</fullName>
            </value>
            <value>
                <fullName>Billingsley BWC	10</fullName>
            </value>
            <value>
                <fullName>Burke Agency Inc	93</fullName>
            </value>
            <value>
                <fullName>BWA South Inc	08</fullName>
            </value>
            <value>
                <fullName>Central Sales, Inc	43</fullName>
            </value>
            <value>
                <fullName>Davenport Associates	21</fullName>
            </value>
            <value>
                <fullName>Distributor Sales Inc	24</fullName>
            </value>
            <value>
                <fullName>Empire State Associates	48</fullName>
            </value>
            <value>
                <fullName>FERGUSON DIST CENTER	102</fullName>
            </value>
            <value>
                <fullName>FERGUSON - METROPLEX	114</fullName>
            </value>
            <value>
                <fullName>Ferguson-Special	14</fullName>
            </value>
            <value>
                <fullName>Hollabaugh Brothers &amp; Assoc	56</fullName>
            </value>
            <value>
                <fullName>HSA	47</fullName>
            </value>
            <value>
                <fullName>Hugh M Cunningham	13</fullName>
            </value>
            <value>
                <fullName>Johnson &amp; White Sales Co	42</fullName>
            </value>
            <value>
                <fullName>Joyce Agency Inc	05</fullName>
            </value>
            <value>
                <fullName>Maloney &amp; Curcio Inc	73</fullName>
            </value>
            <value>
                <fullName>Martin &amp; Smith Inc	50</fullName>
            </value>
            <value>
                <fullName>Mega Western Sales	62</fullName>
            </value>
            <value>
                <fullName>Mid-America Marketing Inc	51</fullName>
            </value>
            <value>
                <fullName>Noland-CDC	17</fullName>
            </value>
            <value>
                <fullName>OK Grp/HM Cunningham	68</fullName>
            </value>
            <value>
                <fullName>Pacific Rim Partners	92</fullName>
            </value>
            <value>
                <fullName>Paramount Sales	58</fullName>
            </value>
            <value>
                <fullName>Platsky Company	74</fullName>
            </value>
            <value>
                <fullName>P-M &amp; Associates	23</fullName>
            </value>
            <value>
                <fullName>Pulley &amp; Associates Inc	65</fullName>
            </value>
            <value>
                <fullName>Rich Sales Inc	69</fullName>
            </value>
            <value>
                <fullName>RKR	75</fullName>
            </value>
            <value>
                <fullName>RMI	44</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>