force-app/main/default/objects/Account/fields/Sales_Rep_Phone_Number_for_Pardot__c.field-meta.xml
<CustomField>
    <fullName>Sales_Rep_Phone_Number_for_Pardot__c</fullName>
    <description>A formula field to be used in Pardot merge field</description>
    <formula>Sales_Rep_Account__r.Phone</formula>
    <label>Sales Rep Phone Number for Pardot</label>
    <type>Text</type>
</CustomField>