force-app/main/default/objects/Account/fields/SAP_Acct__c.field-meta.xml
<CustomField>
    <fullName>SAP_Acct__c</fullName>
    <caseSensitive>true</caseSensitive>
    <externalId>true</externalId>
    <label>SAP Account #</label>
    <length>20</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>