force-app/main/default/objects/Account/fields/SAP_Original_Account_Name__c.field-meta.xml
<CustomField>
    <fullName>SAP_Original_Account_Name__c</fullName>
    <label>SAP Original Account Name</label>
    <length>100</length>
    <type>Text</type>
</CustomField>