force-app/main/default/objects/Account/fields/Second_Contact__c.field-meta.xml
<CustomField>
    <fullName>Second_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Second contact will be shown if applicable</inlineHelpText>
    <label>Second Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts (Second Contact)</relationshipLabel>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>