force-app/main/default/objects/Account/fields/SIC_Code_1__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_1__c</fullName>
    <label>SIC Code 1</label>
    <length>10</length>
    <type>Text</type>
</CustomField>