force-app/main/default/objects/Account/fields/SIC_Code_3__c.field-meta.xml
<CustomField>
    <fullName>SIC_Code_3__c</fullName>
    <label>SIC Code 3</label>
    <length>10</length>
    <type>Text</type>
</CustomField>