force-app/main/default/objects/Account/fields/SIC_Desc_1__c.field-meta.xml
<CustomField>
    <fullName>SIC_Desc_1__c</fullName>
    <label>SIC Desc 1</label>
    <type>TextArea</type>
</CustomField>