force-app/main/default/objects/Account/fields/SIC_Desc_2__c.field-meta.xml
<CustomField>
    <fullName>SIC_Desc_2__c</fullName>
    <label>SIC Desc 2</label>
    <type>TextArea</type>
</CustomField>