force-app/main/default/objects/Account/fields/SIC_Desc_3__c.field-meta.xml
<CustomField>
    <fullName>SIC_Desc_3__c</fullName>
    <label>SIC Desc 3</label>
    <type>TextArea</type>
</CustomField>