force-app/main/default/objects/Account/fields/Third_Contact__c.field-meta.xml
<CustomField>
    <fullName>Third_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Third contact will be shown if applicable</inlineHelpText>
    <label>Third Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Accounts</relationshipLabel>
    <relationshipName>Accounts2</relationshipName>
    <type>Lookup</type>
</CustomField>