force-app/main/default/objects/Account/fields/TSD_Account_Type__c.field-meta.xml
<CustomField>
    <fullName>TSD_Account_Type__c</fullName>
    <label>TSD Account Type</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Engineering Firm</fullName>
            </value>
            <value>
                <fullName>Codes &amp; Standards</fullName>
            </value>
            <value>
                <fullName>Facilities/End User</fullName>
            </value>
            <value>
                <fullName>Manufacturer Rep</fullName>
            </value>
            <value>
                <fullName>Industry Organization</fullName>
            </value>
            <value>
                <fullName>Manufacturer</fullName>
            </value>
            <value>
                <fullName>Architect</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>