force-app/main/default/objects/Account/fields/Vendor_Record_Number__c.field-meta.xml
<CustomField>
    <fullName>Vendor_Record_Number__c</fullName>
    <label>Vendor Record Number</label>
    <length>100</length>
    <type>Text</type>
</CustomField>