force-app/main/default/objects/Account/fields/VMI_Analyst__c.field-meta.xml
<CustomField>
    <fullName>VMI_Analyst__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>VMI Analyst</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Accounts1</relationshipName>
    <type>Lookup</type>
</CustomField>