force-app/main/default/objects/Account/fields/VMI_Product_Category__c.field-meta.xml
<CustomField>
    <fullName>VMI_Product_Category__c</fullName>
    <label>VMI Product Category</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Plastic Pipe</fullName>
            </value>
            <value>
                <fullName>Plastic Fitting</fullName>
            </value>
            <value>
                <fullName>Cast Iron</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>