force-app/main/default/objects/Account/recordTypes/Commercial_Castings.recordType-meta.xml
<RecordType>
    <fullName>Commercial_Castings</fullName>
    <active>true</active>
    <label>Commercial Castings</label>
</RecordType>