force-app/main/default/objects/Account/recordTypes/Contractor.recordType-meta.xml
<RecordType>
    <fullName>Contractor</fullName>
    <active>true</active>
    <label>Contractor Wholesale</label>
</RecordType>