force-app/main/default/objects/Account/recordTypes/Contractor_International.recordType-meta.xml
<RecordType>
    <fullName>Contractor_International</fullName>
    <active>true</active>
    <label>Contractor International</label>
</RecordType>