force-app/main/default/objects/Account/recordTypes/Contractor_Irrigation.recordType-meta.xml
<RecordType>
    <fullName>Contractor_Irrigation</fullName>
    <active>true</active>
    <label>Contractor Irrigation</label>
</RecordType>