force-app/main/default/objects/Account/recordTypes/Distributor_International.recordType-meta.xml
<RecordType>
    <fullName>Distributor_International</fullName>
    <active>true</active>
    <label>Distributor International</label>
</RecordType>