force-app/main/default/objects/Account/recordTypes/Distributor_Irrigation.recordType-meta.xml
<RecordType>
    <fullName>Distributor_Irrigation</fullName>
    <active>true</active>
    <label>Distributor Irrigation</label>
</RecordType>