force-app/main/default/objects/Account/recordTypes/Engineer_International.recordType-meta.xml
<RecordType>
    <fullName>Engineer_International</fullName>
    <active>true</active>
    <label>Engineer International</label>
</RecordType>