force-app/main/default/objects/Account/recordTypes/Group_Key.recordType-meta.xml
<RecordType>
    <fullName>Group_Key</fullName>
    <active>true</active>
    <label>Group Key Wholesale</label>
</RecordType>