force-app/main/default/objects/Account/recordTypes/Group_Key_Commercial_Casting.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_Commercial_Casting</fullName>
    <active>true</active>
    <label>Group Key Commercial Casting</label>
</RecordType>