force-app/main/default/objects/Account/recordTypes/Group_Key_International.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_International</fullName>
    <active>true</active>
    <label>Group Key International</label>
</RecordType>