force-app/main/default/objects/Account/recordTypes/Group_Key_Irrigation.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_Irrigation</fullName>
    <active>true</active>
    <label>Group Key Irrigation</label>
</RecordType>