force-app/main/default/objects/Account/recordTypes/Group_Key_OEM_MHRV.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_OEM_MHRV</fullName>
    <active>true</active>
    <label>Group Key OEM/MHRV</label>
</RecordType>