force-app/main/default/objects/Account/recordTypes/Group_Key_Retail.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_Retail</fullName>
    <active>true</active>
    <label>Group Key Retail</label>
</RecordType>