force-app/main/default/objects/Account/recordTypes/Group_Key_Std.recordType-meta.xml
<RecordType>
    <fullName>Group_Key_Std</fullName>
    <active>true</active>
    <description>Group key record type (standard)</description>
    <label>Group Key</label>
</RecordType>