force-app/main/default/objects/Account/recordTypes/Insurance_Legal_Account.recordType-meta.xml
<RecordType>
    <fullName>Insurance_Legal_Account</fullName>
    <active>true</active>
    <label>Insurance/Legal Account</label>
</RecordType>