force-app/main/default/objects/Account/recordTypes/OEM_MHRV.recordType-meta.xml
<RecordType>
    <fullName>OEM_MHRV</fullName>
    <active>true</active>
    <label>OEM/MHRV</label>
</RecordType>