force-app/main/default/objects/Account/recordTypes/Project_International.recordType-meta.xml
<RecordType>
    <fullName>Project_International</fullName>
    <active>true</active>
    <label>Project International</label>
</RecordType>