force-app/main/default/objects/Account/recordTypes/Project_Irrigation.recordType-meta.xml
<RecordType>
    <fullName>Project_Irrigation</fullName>
    <active>true</active>
    <label>Project Irrigation</label>
</RecordType>