force-app/main/default/objects/Account/recordTypes/Project_Wholesale.recordType-meta.xml
<RecordType>
    <fullName>Project_Wholesale</fullName>
    <active>true</active>
    <label>Project Wholesale</label>
</RecordType>