force-app/main/default/objects/Account/recordTypes/Sales_Rep.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep</fullName>
    <active>true</active>
    <label>Sales Rep Wholesale</label>
</RecordType>