force-app/main/default/objects/Account/recordTypes/Sales_Rep_Commercial_Casting.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep_Commercial_Casting</fullName>
    <active>true</active>
    <label>Sales Rep Commercial Casting</label>
</RecordType>