force-app/main/default/objects/Account/recordTypes/Sales_Rep_International.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep_International</fullName>
    <active>true</active>
    <label>Sales Rep International</label>
</RecordType>