force-app/main/default/objects/Account/recordTypes/Sales_Rep_Irrigation.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep_Irrigation</fullName>
    <active>true</active>
    <label>Sales Rep Irrigation</label>
</RecordType>