force-app/main/default/objects/Account/recordTypes/Sales_Rep_OEM_MHRV.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep_OEM_MHRV</fullName>
    <active>true</active>
    <label>Sales Rep OEM/MHRV</label>
</RecordType>