force-app/main/default/objects/Account/recordTypes/Sales_Rep_Retail.recordType-meta.xml
<RecordType>
    <fullName>Sales_Rep_Retail</fullName>
    <active>true</active>
    <label>Sales Rep Retail</label>
</RecordType>