force-app/main/default/objects/Account/recordTypes/Tech_Services.recordType-meta.xml
<RecordType>
    <fullName>Tech_Services</fullName>
    <active>true</active>
    <label>Tech Services</label>
</RecordType>