force-app/main/default/objects/Account/recordTypes/Transportation_1.recordType-meta.xml
<RecordType>
    <fullName>Transportation_1</fullName>
    <active>true</active>
    <label>Transportation 1</label>
</RecordType>