force-app/main/default/objects/Account/validationRules/SAP_Requirement.validationRule-meta.xml
<ValidationRule>
    <fullName>SAP_Requirement</fullName>
    <active>true</active>
    <errorConditionFormula>AND( 
RecordType.Id = &quot;0126g000001Oog7&quot;, 
ISBLANK(SAP_Acct__c)
)</errorConditionFormula>
    <errorDisplayField>SAP_Acct__c</errorDisplayField>
    <errorMessage>Please add SAP Account Number</errorMessage>
</ValidationRule>