force-app/main/default/objects/Account/listViews/AllAccounts.listView-meta.xml
<ListView>
    <fullName>AllAccounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>CORE.USERS.FIRST_NAME</columns>
    <columns>CORE.USERS.LAST_NAME</columns>
    <columns>Regional_Sale_Manager__c</columns>
    <columns>SAP_Acct__c</columns>
    <columns>PARENT_NAME</columns>
    <columns>ACCOUNT.RECORDTYPE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Contractor_International,Account.Contractor,Account.Distributor_International,Account.Distributor_Irrigation</value>
    </filters>
    <label>All Accounts</label>
</ListView>