force-app/main/default/objects/Account/listViews/Contractor_Accounts.listView-meta.xml
<ListView>
    <fullName>Contractor_Accounts</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Vendor_Record_Number__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Rep_Account__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Tech_Services</value>
    </filters>
    <label>*Contractor Accounts</label>
    <sharedTo>
        <role>System_Administrator</role>
        <role>Vice_Presidents</role>
    </sharedTo>
</ListView>