force-app/main/default/objects/Account/listViews/Contractor_Accounts_Irrigation.listView-meta.xml
<ListView>
    <fullName>Contractor_Accounts_Irrigation</fullName>
    <columns>ACCOUNT.NAME</columns>
    <columns>ACCOUNT.ADDRESS1_CITY</columns>
    <columns>ACCOUNT.ADDRESS1_STATE</columns>
    <columns>Vendor_Record_Number__c</columns>
    <columns>Sales_Rep__c</columns>
    <columns>Sales_Rep_Account__c</columns>
    <columns>CORE.USERS.ALIAS</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>ACCOUNT.RECORDTYPE</field>
        <operation>equals</operation>
        <value>Account.Contractor_Irrigation</value>
    </filters>
    <label>*Contractor Accounts - IR</label>
    <sharedTo>
        <role>Irrigation_Manager</role>
        <role>Irrigation_Rep</role>
    </sharedTo>
</ListView>